2024R2/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/BFECommand.md
# `BFECommand`

<a id="ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.BFECommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.BFECommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a BFE command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|------------------------------------|-----------------------------|
| [`Elem`](#BFECommand.Elem)         | Gets the element number.    |
| [`Index`](#BFECommand.Index)       | Gets the command index.     |
| [`Lab`](#BFECommand.Lab)           | Gets the label.             |
| [`Name`](#BFECommand.Name)         | Gets the command name.      |
| [`Stloc`](#BFECommand.Stloc)       | Gets the starting location. |
| [`ValCount`](#BFECommand.ValCount) | Gets the number of values.  |
| [`Values`](#BFECommand.Values)     | Gets the values.            |

<a id="property-detail"></a>

## Property detail

<a id="BFECommand.Elem"></a>

### *property* BFECommand.Elem *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the element number.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Index"></a>

### *property* BFECommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Lab"></a>

### *property* BFECommand.Lab *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the label.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Name"></a>

### *property* BFECommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Stloc"></a>

### *property* BFECommand.Stloc *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the starting location.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.ValCount"></a>

### *property* BFECommand.ValCount *: Any | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the number of values.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Values"></a>

### *property* BFECommand.Values *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[Any] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the values.

<!-- !! processed by numpydoc !! -->

