2024R2/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/BFECommand.md
# `BFECommand`



#### *class* ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.BFECommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a BFE command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|------------------------------------|-----------------------------|
| [`Elem`](#BFECommand.Elem)         | Gets the element number.    |
| [`Lab`](#BFECommand.Lab)           | Gets the label.             |
| [`Stloc`](#BFECommand.Stloc)       | Gets the starting location. |
| [`ValCount`](#BFECommand.ValCount) | Gets the number of values.  |
| [`Values`](#BFECommand.Values)     | Gets the values.            |
| [`Name`](#BFECommand.Name)         | Gets the command name.      |
| [`Index`](#BFECommand.Index)       | Gets the command index.     |

<a id="property-detail"></a>

## Property detail

<a id="BFECommand.Elem"></a>

### *property* BFECommand.Elem *: System.Int32 | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the element number.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Lab"></a>

### *property* BFECommand.Lab *: System.String | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the label.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Stloc"></a>

### *property* BFECommand.Stloc *: System.Int32 | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the starting location.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.ValCount"></a>

### *property* BFECommand.ValCount *: System.Object | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the number of values.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Values"></a>

### *property* BFECommand.Values *: System.Collections.Generic.IReadOnlyList[System.Object] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the values.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Name"></a>

### *property* BFECommand.Name *: System.String | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="BFECommand.Index"></a>

### *property* BFECommand.Index *: System.UInt32 | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

